--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -1,12 +1,12 @@
 # Background
 
-This chapter will give a more extensive introduction to the themes covered within the results chapters.
+This chapter will give a more extensive introduction to the themes covered within the results chapters. It will set out where the current gaps are in the literature and provide an overview of the hypotheses of the thesis.
 
 ## The history of body mass index
 Although body fatness has long been associated with adverse health, the use of the term body mass index (BMI), is relatively recent. BMI is thought to have been first defined in 1972 by Ancel Keys [@Blackburn2014]. This term was given to define the ratio of weight in kilograms over the square of the height in metres. This measure was found to reflect overall body fatness well, while being easy and cheap to measure. The World Health Organization first defined the BMI categories in 1995 [@WHO1995] used today: the National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity. These bounds were chosen based on associations with mortality. 
 
-## Cardiovascular disease is now the leading cause of deaths worldwide
-Cardiovascular disease is one of the major causes of mortality in many countries, with over 18 million deaths attributed to cardiovascular disease (CVD) in 2019 and amounting to a third of all deaths [@BritishHeartFoundation2021]. Furthermore, global deaths from coronary heart disease (CHD) and stroke have also amounted to ~9 million and ~6.5 million deaths, respectively. Current known risk factors for cardiovascular diseases include smoking, physical inactivity, poor diet and high cholesterol [@Virani2021]. Overweight and obesity are also well established risk factors for cardiovascular disease and are now considered the leading years lived with disability and injury risk factors in the United States [@Virani2021].
+## Cardiovascular diseases are the leading cause of deaths worldwide
+Diseases affecting the heart and blood vessels are the major cause of mortality in many countries [@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively [@BritishHeartFoundation2021]. Current known risk factors for cardiovascular diseases include smoking, physical inactivity, poor diet and high cholesterol [@Virani2021]. Overweight and obesity are also well established risk factors for cardiovascular disease and are now considered the leading years lived with disability and injury risk factors in the United States [@Virani2021].
 
 ## Mendelian randomisation can be used to explore causality
 Risk factors have often been identified through observational associations. Observational studies are often limited by confounding and reverse causation. Mendelian randomisation (MR) is a technique which uses the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised control trial (RCT) [@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants [@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-statins), using low density lipoproteins-cholesterol (LDL-C) and cardiovsacular events as an example [@Bennett2017]. Here, single nucleotide polymorphisms (SNPs) can be used. As an example, people who have the G nucleotide may have lower LDL-C than people with an A nucleotide. As these alleles are randomly assorted, having either a G or an A nucleotide should not affect other factors such as whether you smoke or not. If those who have the G nucleotide also have lower rates of cardiovascular events, it is likely that the relationship between LDL-C and cardiovascular events is causal.
@@ -16,16 +16,16 @@ include_graphics(path = "figure/Intro_background/MR_statin_example.jpg", dpi = N
 ```
 
 ## The genetics of obesity
-Mendelian randomization can be used to explore whether other modifiable exposures, such as BMI, cause disease. There are strong correlations between BMI and more objective measures of fat mass measured by dual-energy X-ray absorptiometry (DXA) [@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene [@Zhang1994] lead to mice having obesity. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals [@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly large samples [@Locke2015], with the largest and most recent GWAS performed in 2018 be Yengo et al. [@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations [@Yengo2018].
+Mendelian randomization can be used to explore whether other modifiable exposures, such as BMI, cause disease. There are strong correlations between BMI and more objective measures of fat mass measured by dual-energy X-ray absorptiometry (DXA) [@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene [@Zhang1994] lead to mice having obesity. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals [@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes [@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al. [@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations [@Yengo2018].
 
 ## Higher BMI has a causal effect on ischaemic heart disease
-Various studies have found a link between adiposity and ischaemic heart disease (IHD) risk through various study designs. For example, observational studies ... [@@Khan2018; @Nordestgaard2012], MR [@Nordestgaard2012; @Dale2017]. In particular, Nordestgaard et al. used single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate the effect of BMI on IHD, where they estimated that a 4kg/m^2^ increases the odds of IHD by 52%. Further, higher BMI has been shown to have a causal relationship with ischaemic stroke [@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE) [@Jimenez2021].
+Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease [@Khan2018]. Another study found that a 4gk/m^2^ increased the odds of ischaemic heart disease by 20-30% [@Nordestgaard2012]. Studies which have used MR and therefore estimate the causal effect have indicated that BMI may have an even greater effect on IHD. Nordestgaard et al. utilised single nucleotide polymorphisms (SNPs) which are associated with BMI to estimate that 4kg/m^2^ higher BMI increases the odds of IHD by as much as 52% [@Nordestgaard2012]. Other studies which have used more specific measures of adiposity, such as waist hip ratio adjusted for BMI (WHRadjBMI), have also found evidence for a causal effect of adiposity on coronary heart disease risk [@Dale2017]. Further, higher BMI has been shown to have a causal relationship with more specific measures of cardiovascular events such as ischaemic stroke [@Harshfield2021]. A separate line of evidence for a causal effect of BMI on cardiovascular outcomes is that more weight loss after bariatric surgery reduces the occurrence of major adverse cardiovascular events (MACE) [@Jimenez2021]. Despite evidence for causal relationships, changes which occur as a result of BMI which lead to these cardiovascular events are unclear.
 
 ## How does higher BMI cause increased risk of thrombosis?
-There is also extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL) [@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. Over time, LDLs retain in the arterial intima, which leads to an immuno-inflammatory response and development of atherosclerotic plaques. As these plaques develop, they become unstable and can rupture, thereby causing a myocardial infarction or ischaemic stroke [@Ference2017]. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD [@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors mediating this association.
+There is extensive evidence that higher BMI causes hypertension and T2D, which contribute to the increased risk of a heart attack or a stroke. As well as this, studies which have explored the molecular footprint of adiposity have tended to focus on the lipidome, such as cholesterol and triglycerides in lipoprotein subtypes, including low-density lipoproteins (LDL), very-low-density lipoproteins (VLDL) and high-density lipoproteins (HDL) [@Bell2018a; @Wurtz2014], where a higher BMI is associated with an increase in LDLs and a decrease in large HDLs. This has been explored in a causal framework. Over time, LDLs retain in the arterial intima, which leads to an immuno-inflammatory response and development of atherosclerotic plaques. As these plaques develop, they become unstable and can rupture, thereby causing a myocardial infarction or ischaemic stroke [@Ference2017]. LDLs are therefore an important example of circulating molecules which are causally related to both BMI and disease risk. Although LDLs are important in mediating the increased risk of CHD [@Lu2014], this does not account for all the risk. Therefore, it is likely that there are other factors mediating this association.
 
-## Platelets are key cells in thrombosis - par1-ap thrombin etc
-Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis [@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Platelet activation also results in activation of integrins such as α~IIb~β~3~ and subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. These key platelet receptors are indicated in figure \@ref(fig:platelet-activation). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
+## Platelets are key cells in thrombosis - par1-ap thrombin etc - add inside out signalling
+Platelets are anucleate cells which are generated from megakaryocytes in the bone marrow. Platelets are one of the key cells involved in haemostasis [@Rivera2009]. Under normal conditions, the endothelium releases nitric oxide (NO) and prostaglandin I2 (PGI2) which suppress platelet activation [@Yau2015]. When the endothelium is damaged, platelets adhere to the injured vessel wall through the glycoprotein Ib-IX-V (GPIb-IX-V) receptor and the glycoprotein VI (GPVI) collagen receptor. As a result, platelets secrete alpha and dense granules and undergo shape change [@Badimon2012]. Alpha granules release growth factors (e.g. IGF-1), clotting factors and chemokines [@Gear2003], whereas dense granules release molecules such as ADP, which further activate platelets by interacting with the P2Y1 and P2Y12 platelet receptors. Integrins are heterodimeric transmembrane glycoprotein complexes, which are important in platelet activation [@Durrant2017a]. Binding of agonists such as thrombin (or the synthetic peptide agonist PAR1-AP/TRAP-6) to the protease-activated receptor 1 (PAR-1AP) (\@ref(fig:platelet-activation)) results in activation of the integrin α~IIb~β~3~. This is known as inside-out signalling. Here, inositol trisphosphate (IP3) and diacylglycerol are generated, which leads to an increase in cytosolic calcium (Ca^2+^). This in turn activates CALDAG-GEF1 as well as protein kinase C (PKC) [@Mehrbod2013]. The small GTPase, Rap1 is then activated which recruits proteins such as talin and kindlin [@Durrant2017] Subsequent fibrinogen binding results in platelet aggregation, thrombus formation and cessation of bleeding [@Rivera2009]. These key platelet receptors are indicated in figure \@ref(fig:platelet-activation). Despite these processes being essential for haemostasis, when platelets become hyperactive, the balance is tipped in favour of thrombosis.
 
 ```{r platelet-activation, echo = FALSE, fig.cap="Key platelet receptors for platelet activation"}
 include_graphics(path = "figure/Intro_background/Platelet_activation.png", dpi = NA)
